<resources>
    <string name="app_name">Grupo1-Android</string>
    <string name="access_token">pk.eyJ1IjoiZ3J1cG8xa2FyaSIsImEiOiJjbGczNXF0OHYwMXpvM2pudjd5MG5veDNwIn0.6VP-RBPmmplGkJ15pEmqXg</string>
    <string name="permitir">Permitir</string>
    <string name="LogoVagaInclusiva">Logotipo Vaga Inclusiva</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="arrowdown">arrowdown</string>
    <string name="faca_login_ou_cadastre_se">Faça login ou cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="nao_avaliado">Não avaliado</string>
    <string name="bom">Bom</string>
    <string name="ruim">Ruim</string>
    <string name="closebutton">closeButton</string>
    <string name="cadastro">Cadastro</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="image3">image3</string>
    <string name="imageview">imageView</string>
    <string name="texto_grande_boas_vindas">Olá, visitante! Para acessar o aplicativo VagaInclusiva, é necessário que você esteja conectado à internet.</string>
    <string name="tentar_novamente">Tentar Novamente</string>
    <string name="imageview4">imageView4</string>


</resources>