<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaConexaoInternet">

    <ImageView
        android:contentDescription="@string/image3"
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="729dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagemfundochairman" />

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="193dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:background="#88000000"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216">

        <ImageView
            android:contentDescription="@string/imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/imagemexclamacao" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/texto_grande_boas_vindas"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/botaotentenovamente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#F07E13"
        android:text="@string/tentar_novamente"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/purple_200"
        android:textColorLink="@color/purple_200"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

</androidx.constraintlayout.widget.ConstraintLayout>