<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaLogin">

    <TextView
        android:id="@+id/viewCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jura"
        android:lineSpacingExtra="21dp"
        android:text="@string/cadastro"
        android:textAppearance="@style/cadastre_se"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/viewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jura"
        android:lineSpacingExtra="21dp"
        android:text="@string/login"
        android:textAppearance="@style/cadastre_se"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jura"
        android:lineSpacingExtra="21dp"
        android:text="@string/login"
        android:textAppearance="@style/login"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/botaologin"
        android:layout_width="287dp"
        android:layout_height="61dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/jura"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <EditText
        android:id="@+id/emaillogin"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/email"
        android:ems="5"
        android:fontFamily="@font/jura"
        android:hint="@string/e_mail"
        android:lineSpacingExtra="21dp"
        android:textAppearance="@style/input"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/senhalogin"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/lock"
        android:drawableEnd="@drawable/eyeclosed"
        android:ems="5"
        android:fontFamily="@font/jura"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:lineSpacingExtra="21dp"
        android:textAppearance="@style/input"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>